--- a/client/src/app/components/app/app.component.css
+++ b/client/src/app/components/app/app.component.css
@@ -2,4 +2,19 @@
   width: 100%;
   height: 100%;
   background-color: #000738;
+  display: flex;
+}
+#sidebar-wrapper {
+  flex: 2;
+  background-color: lightblue;
+}
+#action-wrapper {
+  flex: 5;
+  background-color: lightcoral;
+}
+#opponents-wrapper {
+  background-color: lightgreen;
+}
+#log-wrapper {
+  background-color: lightyellow;
 }
