--- a/client/src/app/components/app/app.component.html
+++ b/client/src/app/components/app/app.component.html
@@ -1,1 +1,12 @@
-<div id="app-wrapper"></div>
+<div id="app-wrapper">
+  <div id="sidebar-wrapper">
+    <div id="opponents-wrapper">
+      <app-opponent name="Player 1" [numOfCards]="3"></app-opponent>
+      <app-opponent name="Player 2" [numOfCards]="6"></app-opponent>
+    </div>
+    <div id="log-wrapper">
+
+    </div>
+  </div>
+  <div id="action-wrapper"></div>
+</div>
