Card class and component

--- a/client/src/app/components/app/app.component.html
+++ b/client/src/app/components/app/app.component.html
@@ -8,5 +8,9 @@
 
     </div>
   </div>
-  <div id="action-wrapper"></div>
+  <div id="action-wrapper">
+    <div style="width: 120px; height: 160px;">
+      <app-card [card]="card"></app-card>
+    </div>
+  </div>
 </div>
