--- a/client/src/app/components/card/card.component.css
+++ b/client/src/app/components/card/card.component.css
@@ -2,10 +2,11 @@
   width: 100%;
   height: 100%;
   border: 4px solid white;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100px;
+  font-size: 48px;
   font-weight: bold;
   color: white;
   /*transform: rotate(12deg);*/
