--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -1,3 +1,14 @@
-<p>
-  lobby works!
-</p>
+<div id="lobby-wrapper">
+  <div id="panel-wrapper">
+    <h2>Players</h2>
+    <div id="players-table">
+      <div class="player-name-wrapper separated">Player 1</div>
+      <div class="player-name-wrapper separated">Player 2</div>
+      <div class="player-name-wrapper separated">Player 3</div>
+      <div class="player-name-wrapper"></div>
+    </div>
+    <div id="start-game-button" (click)="startGame()">
+      Start Game
+    </div>
+  </div>
+</div>
