--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -7,6 +7,9 @@
       <div class="player-name-wrapper separated">Player 3</div>
       <div class="player-name-wrapper"></div>
     </div>
+    <div id="enter-game-button" (click)="startGame()">
+      Enter Game
+    </div>
     <div id="start-game-button" (click)="startGame()">
       Start Game
     </div>
