--- a/client/src/app/components/app/app.component.html
+++ b/client/src/app/components/app/app.component.html
@@ -2,6 +2,6 @@
   <app-registration
     *ngIf="!isRegistered && !gameIsInProgress"
     (registrationComplete)="onRegistrationComplete($event)"></app-registration>
-  <app-lobby *ngIf="isRegistered && !gameIsInProgress"></app-lobby>
+  <app-lobby *ngIf="isRegistered && !gameIsInProgress" [socket]="socket"></app-lobby>
   <app-game *ngIf="gameIsInProgress"></app-game>
 </div>
