--- a/client/src/app/components/lobby/lobby.component.html
+++ b/client/src/app/components/lobby/lobby.component.html
@@ -2,7 +2,7 @@
   <div id="panel-wrapper">
     <h2>Players</h2>
     <div id="players-table">
-      <div *ngFor="let player of lobbyPlayers" class="player-name-wrapper separated">{{ player.name }}</div>
+      <div *ngFor="let playerName of lobbyPlayerNames" class="player-name-wrapper separated">{{ playerName }}</div>
     </div>
     <div id="buttons-wrapper">
       <div class="button" (click)="changeLobbyStatus()">
