Displaying correct rooms

--- a/client/src/app/components/app/app.component.css
+++ b/client/src/app/components/app/app.component.css
@@ -5,3 +5,12 @@
   user-select: none;
   color: white;
 }
+#wrapper-with-header {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.expand {
+  flex-grow: 1;
+}
