--- a/client/src/app/components/room/room.component.html
+++ b/client/src/app/components/room/room.component.html
@@ -1,4 +1,9 @@
-<div id="lobby-wrapper">
+<div id="room-wrapper">
+  <div id="left-side">
+    <span id="back-link" (click)="onBackClick()">
+      Back
+    </span>
+  </div>
   <div id="panel-wrapper">
     <h2>Players</h2>
     <div id="players-table">
@@ -16,4 +21,5 @@
       </div>
     </div>
   </div>
+  <div id="right-side"></div>
 </div>
