--- a/client/src/app/components/room/room.component.css
+++ b/client/src/app/components/room/room.component.css
@@ -1,4 +1,4 @@
-#lobby-wrapper {
+#room-wrapper {
   width: 100%;
   height: 100%;
   display: flex;
@@ -9,6 +9,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+#left-side, #right-side {
+  flex-grow: 1;
+  flex: 1;
+  display: flex;
+  padding: 30px 0 0 30px;
+  box-sizing: border-box;
+  height: 100%;
+}
+#left-side {
+  font-size: 21px;
+}
+#back-link {
+  cursor: pointer;
 }
 #players-table {
   width: 450px;
