--- a/client/src/app/components/app/app.component.html
+++ b/client/src/app/components/app/app.component.html
@@ -5,7 +5,7 @@
   <div id="wrapper-with-header">
     <app-header *ngIf="status > 0" (signOut)="signOutClicked()"></app-header>
     <app-choose-lobby class="expand" *ngIf="status == 1 && chosenLobby <= 0" [lobbies]="lobbiesList" (lobbySelected)="onLobbySelected($event)"></app-choose-lobby>
-    <app-lobby class="expand" *ngIf="status === 1 && chosenLobby > 0" [rooms]="rooms" (roomChosen)="roomChosen($event)"></app-lobby>
+    <app-lobby class="expand" *ngIf="status === 1 && chosenLobby > 0" [gameId]="chosenLobby" [rooms]="rooms" (roomChosen)="roomChosen($event)"></app-lobby>
     <app-room class="expand" *ngIf="status === 2" [storageData]="storageData" (backClick)="onBackClick()"></app-room>
     <app-game class="expand" *ngIf="status === 3"></app-game>
   </div>
